# Web-Scrapper

./: .env.example  .gitignore  Makefile  README.md  app.py  docker-compose.yml  package.json
.github/workflows/: ci.yml  (+3 more)
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260309_0001_initial_schema.py  20260309_0002_auth_credentials.py
apps/api/app/: config.py  main.py  maintenance.py  models.py  observability.py  queue.py  rate_limiter.py  security.py  store.py  worker.py  worker_runner.py
apps/api/app/services/: ai_planner.py  exporter.py  extractor.py  fetcher.py  scoring.py  template_engine.py
apps/api/tests/: conftest.py  test_ai_planner.py  test_api.py  test_auth.py  test_e2e_api_queue_export.py  test_exporter.py  test_extraction_quality.py  test_integration_postgres_redis_worker.py  test_pagination_and_dedup.py  test_playwright_fallback.py  test_queue_worker.py  test_regression_fixtures.py  test_security_rate_limit.py  test_store.py  test_template_engine.py  test_worker_load.py
apps/api/tests/fixtures/regression/: ecommerce_listing_v1.expected.json  ecommerce_listing_v1.html  jobs_directory_v1.expected.json  jobs_directory_v1.html  load_more_catalog_v1.expected.json  load_more_catalog_v1.page1.html  load_more_catalog_v1.page2.html  manifest.json  next_button_catalog_v1.expected.json  next_button_catalog_v1.page1.html  next_button_catalog_v1.page2.html  property_listing_v1.expected.json  property_listing_v1.html
apps/api/webscrapper_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: clean_products.py
(+122 files in other folders)
