[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webscrapper-api"
version = "0.1.0"
description = "MVP API for AI-assisted web scraper"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "redis>=5.0.0",
  "alembic>=1.13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0"
]
browser = [
  "playwright>=1.52.0"
]
s3 = [
  "boto3>=1.34.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "alembic*", "exports*"]
